# ntdlib

./: .clang-format  .clang-tidy  .clangd  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  pre-commit.yml
examples/: CMakeLists.txt  namedthread-demo.cpp  sync_queue_demo.cpp
include/ntd/: config.hpp  namedthread.hpp  safe_mutex.hpp  sync_queue.hpp  utility.hpp
include/ntd/detail/: thread_utils.hpp
test/: CMakeLists.txt  test_namedthread.cpp  test_safe_mutex.cpp
